--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -5,5 +5,6 @@
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/public/js/form-validation.js"></script>
 </body>
 </html>
