--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kenyan Freelancer Marketplace</title>
+    <link rel="shortcut icon" href="/images/logo1.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,7 +17,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="/">Kenyan Freelancers</a>
+        <a class="navbar-brand" href="/"
+          ><img src="/images/logo1.png" alt="logo" style="width: 50px" />Kenyan
+          Freelancer</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +40,14 @@
             <li class="nav-item">
               <a class="nav-link" href="/freelancers">Hire Freelancers</a>
             </li>
-            <!-- start -->
+            <li class="nav-item">
+              <a class="nav-link" href="/services">Services</a>
+            </li>
             <% if (user && user.id) { %>
             <li class="nav-item">
               <a class="nav-link" href="/messages">Messages</a>
             </li>
-            <% } %>
-            <!-- end -->
-
-            <% if (locals.user) { %>
+            <% } %> <% if (locals.user) { %>
             <li class="nav-item">
               <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
